trunk/Archive2/65/69afb96f558703/output
main.cpp:14:7: error: no member named 'swap' in 'std::basic_stringstream<char>'
  foo.swap(bar);
  ~~~ ^
1 error generated.
